# linux-implant

./: Cargo.toml  README.md
src/: errors.rs  main.rs
src/http/: connect.rs  exchange.rs  mod.rs  result.rs
src/models/: exchange.rs  mod.rs  screenshot.rs  system_info.rs  task.rs
src/tasks/: images.rs  mod.rs  shell.rs  system.rs  task_handler.rs
src/utils/: mod.rs  network_encryption.rs
