[package]
name = "linux-implant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
x25519-dalek = "1"
rand = { version = "0.7", features = ["getrandom"] }
base64 = "0"
thiserror = "1"
